kubernetes/apps/nuc/longhorn-ingress-route-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  routes:
    - match: Host(`longhorn.heimelska.co.uk`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
