kubernetes/apps/nuc/smokeping-patches.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: smokeping
  namespace: smokeping
spec:
  routes:
    - match: Host(`smokeping.heimelska.co.uk`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: smokeping-staging-tls
